# fatcat-worker

./: .dockerignore  .env-example  .gitignore  .pylintrc  Dockerfile  README.md  config-example.yml  pyproject.toml
.github/workflows/: cicd.yml
fatcat_worker/: __init__.py  __main__.py  config.py  worker.py
tests/: test_worker.py
